Add rerun functionality to the data page

--- a/data.ipynb
+++ b/data.ipynb
@@ -20,8 +20,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_baja = pd.read_excel(\"Baja.xlsx\")\n",
-    "df_pltu = pd.read_excel(\"DATASETPLTU.xlsx\")"
+    "df_baja = pd.read_excel(\"Sample Data/Baja.xlsx\")\n",
+    "df_pltu = pd.read_excel(\"Sample Data/DATASETPLTU.xlsx\")"
    ]
   },
   {
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,14 +89,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Converting dataframe: 100%|██████████| 986/986 [00:00<00:00, 5596189.10it/s]\n"
+      "Converting dataframe: 100%|██████████| 986/986 [00:00<00:00, 9069262.60it/s]\n"
      ]
     },
     {
@@ -114,14 +114,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Converting dataframe: 100%|██████████| 300/300 [00:00<00:00, 1596816.24it/s]\n"
+      "Converting dataframe: 100%|██████████| 300/300 [00:00<00:00, 1972243.26it/s]\n"
      ]
     },
     {
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
