Add minimal=True to profile_report

--- a/data.ipynb
+++ b/data.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,14 +89,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Converting dataframe: 100%|██████████| 986/986 [00:00<00:00, 9069262.60it/s]\n"
+      "Converting dataframe: 100%|██████████| 986/986 [00:00<00:00, 5241551.01it/s]\n"
      ]
     },
     {
@@ -114,14 +114,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Converting dataframe: 100%|██████████| 300/300 [00:00<00:00, 1972243.26it/s]\n"
+      "Converting dataframe: 100%|██████████| 300/300 [00:00<00:00, 1782282.15it/s]\n"
      ]
     },
     {
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.1.-1"
   }
  },
  "nbformat": 4,
